# testmap-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  update_pin.py
.github/workflows/: sync.yml
testmap_pre_commit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
