[project]
# A pre-commit mirror, ruff-pre-commit style: this package is never published to
# PyPI. pre-commit clones this repo at a tag, `pip install .`s it, and the sole
# dependency below brings in `testmap` so the hook can run `testmap report`.
# `version` is a static placeholder — the real version is the git tag consumers
# pin via `rev:`. No `requires-python` here (testmap's own floor still applies).
name = "testmap-pre-commit"
version = "0.0.0"
# Bootstrap pin: an immutable testmap commit on main that already has the
# coverage-gate exit code, used until testmap>=0.3.0 lands on PyPI. From then on
# update_pin.py / the sync workflow rewrite this to `testmap==<version>` and tag
# the mirror automatically — no manual re-pinning.
dependencies = [
    "testmap @ git+https://github.com/tylerriccio33/testmap.git@58614dcfcc5e9cea267793424696ec8550e8e65f#subdirectory=packages/testmap",
]
