[project]
# A pre-commit mirror, ruff-pre-commit style: this package is never published to
# PyPI. pre-commit clones this repo at a tag, `pip install .`s it, and the sole
# dependency below brings in `testmap` so the hook can run `testmap report`.
# `version` is a static placeholder — the real version is the git tag consumers
# pin via `rev:`. No `requires-python` here (testmap's own floor still applies).
name = "testmap-pre-commit"
version = "0.0.0"
# Kept in lockstep with testmap's PyPI releases by update_pin.py / the sync
# workflow, which rewrite this line and tag the mirror v<version> — no manual
# re-pinning.
dependencies = [
    "testmap==0.5.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Metadata-only: no modules to package (update_pin.py is tooling, not shipped),
# so setuptools never runs flat-layout auto-discovery — the build is identical
# across Python and setuptools versions.
[tool.setuptools]
py-modules = []
